--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,1 +1,30 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+p,h1,h2,h3,h4,h5,h6 {
+    user-select: none;
+}
+
+a {
+    user-select: none;
+    text-decoration: none;
+    color: $primary;
+    font-weight: bold;
+}
+
+body {
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.error {
+    color: $red-500;
+}
+ 
+.subtext {
+    font-size: smaller;
+}
+
+.navbar-color {
+    background-color: #FFFFFF;
+}
