--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -2891,7 +2891,7 @@ textarea.form-control-lg {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
+  --bs-btn-font-family: "Fraunces", serif;
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
@@ -11861,6 +11861,11 @@ body {
   animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+}
+
+input[type="button"]{
+  user-select: none;
+  font-family: "Fraunces", serif;
 }
 
 .error {
